<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="service.addresses"
        app:icon="@drawable/ic_image_looks_6"
        app:title="@string/settings_service_addresses"
        app:enableCopying="true"/>
    <SwitchPreference
        app:key="service.backgroundRestriction"
        app:icon="@drawable/ic_device_battery_alert"
        app:title="@string/settings_service_battery_killer"
        app:summaryOff="@string/settings_service_battery_killer_summary_off"
        app:summaryOn="@string/settings_service_battery_killer_summary_on"
        app:persistent="false"/>
    <EditTextPreference
        app:key="service.duid"
        app:persistent="false"
        app:icon="@drawable/ic_action_perm_identity"
        app:title="DUID"
        app:singleLine="true"
        app:useSimpleSummaryProvider="true"/>
    <Preference
        app:key="misc.source"
        app:icon="@drawable/ic_toggle_star"
        app:title="@string/settings_misc_source"
        app:summary="@string/settings_misc_source_summary"/>
    <Preference
        app:key="misc.donate"
        app:icon="@drawable/ic_action_card_giftcard"
        app:title="@string/settings_misc_donate"
        app:summary="@string/settings_misc_donate_summary"/>
</PreferenceScreen>
